# private-payments-wallet

./: .gitignore  Cargo.toml  README.md  walkthrough.md
.claude/agents/: executor.md
.github/workflows/: verify-contracts.yml
android/: gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: deposit_onchain.json  transfer_onchain.json  withdraw_onchain.json
android/app/src/main/java/com/privatepayments/: MainActivity.kt
android/app/src/main/java/com/privatepayments/net/: DriveBackup.kt  Endpoints.kt  HorizonClient.kt  IndexerClient.kt  InsecureTls.kt  RelayerClient.kt  SorobanRpc.kt
android/app/src/main/java/com/privatepayments/state/: ChainStore.kt  CoinSelector.kt  ContactStore.kt  NoteStore.kt  WalletBackup.kt
android/app/src/main/java/com/privatepayments/ui/: ActivityScreen.kt  AmountScreen.kt  AuditScreen.kt  BackupScreen.kt  Common.kt  ConfirmScreen.kt  DisclosureScreen.kt  Format.kt  Haptics.kt  HomeScreen.kt  ModeSlider.kt  OnboardingScreen.kt  PeopleScreen.kt  ProofScreen.kt  QrCaptureActivity.kt  QrCode.kt  QrScan.kt  QrViewfinderView.kt  ReceiveScreen.kt  RecoveryScreen.kt  RegisterScreen.kt  SettingsScreen.kt  SplashScreen.kt  SuccessScreen.kt  TxDetailScreen.kt  ViewingKeyScreen.kt  WalletState.kt
android/app/src/main/java/com/privatepayments/ui/theme/: Effects.kt  Fonts.kt  Theme.kt
android/app/src/main/java/com/privatepayments/wallet/: WalletManager.kt
android/app/src/main/java/uniffi/prover_ffi/: prover_ffi.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_qr_capture.xml  qr_barcode_scanner.xml
android/app/src/main/res/values/: themes.xml
deploy/aws/: README.md  main.tf  package.sh  user_data.sh  variables.tf
deploy/aws/server/: docker-compose.postgres.yml  nginx-pp.conf  pp-indexer.service  pp-relayer.service  setup-server.sh
docs/: architecture.excalidraw  full-viewing-key.md
fixture-gen/: Cargo.toml
fixture-gen/src/: main.rs
indexer/: Cargo.toml
indexer/seed/: stella_events.sql
indexer/src/: api.rs  db.rs  main.rs  rpc.rs
prover-ffi/: Cargo.toml  build.rs
prover-ffi/circuits/: policytx42.wasm
prover-ffi/fixtures/: deposit_onchain.json  deposit_params.json  policy_tx_2_2_1in1out.json  policy_tx_4_2_1in1out.json  transfer_onchain.json  withdraw_onchain.json
prover-ffi/src/: ext_data_hash.rs  lib.rs  rapidsnark_backend.rs  submit.rs  wallet.rs
relayer/: Cargo.toml
relayer/src/: main.rs  rpc.rs
