[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone backend service: polls Stellar RPC getEvents for the pool + ASP
# contracts, stores raw events in SQLite, and serves them with cursor-based
# pagination. Self-contained — no dependency on the reference repo.

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
